# ChatGPBudgetManager

./: README.md  pyproject.toml
budget_manager/: __init__.py  __main__.py  budget_manager.py
