[tool.poetry]
name = "gpbudget_manager"
version = "0.1.0"
description = "Auto-manage API and other budgets for software agents"
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
